# sisyphus-academica

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Dockerfile.ubi  README.md  blog-post.md  docker-compose.yml  install.sh  poc-plan.md  poc-report.md  poc_test.py  pyproject.toml  requirements.txt
.autopoc/: rhoai-evaluation.md
.github/workflows/: CODEOWNERS  ci.yml  codeql.yml  pages.yml
config/: agent-config.json
docs/: _config.yml  agents.md  architecture.md  faq.md  first-contributor.md  index.md  novelty-engines.md  pipeline.md  reviewers.md  tools.md
docs/assets/css/: main.css
docs/guide/: installation.md
kubernetes/: namespace.yaml  sisyphus-demo-job.yaml  sisyphus-help-job.yaml  sisyphus-import-job.yaml
launch-kit/: 01-reddit-machinelearning.md  02-reddit-localllama.md  03-hackernews-showhn.md  04-twitter-thread.md  05-devto-crosspost.md  06-newsletter-pitch.md
novelty-engines/: assumption-excavator.md  contrarian.md  counterfactual-generator.md  cross-pollinator.md  heretic.md  paradox-sifter.md
orchestrator/: research-director.md
reviewers/: competitor.md  dreamer.md  empiricist.md  ethicist.md  historian.md  methodologist.md  pragmatist.md  skeptic.md  student.md  theorist.md
skills/: skill-academic-humanizer.md
skills/novelty-engines/: assumption-excavator.md  contrarian.md  counterfactual-generator.md  cross-pollinator.md  heretic.md  paradox-sifter.md
skills/reviewers/: dreamer.md  empiricist.md  pragmatist.md  skeptic.md  theorist.md
src/sisyphus/: __init__.py  cli.py  configure.py  demo.py
subagents/: data-engineer.md  formatter.md  gap-analyzer.md  literature-scout.md  methodology-designer.md  style-auditor.md  verifier.md  writer.md
templates/arxiv/: template.tex
templates/iclr/: iclr2025.sty
templates/icml/: icml2025.sty
templates/nature/: template.tex
templates/neurips/: neurips_2025.sty  template.tex
tests/: conftest.py  test_citation_verifier.py  test_cli.py  test_literature_client.py
tools/: __init__.py  citation_verifier.py  literature_client.py
