[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sisyphus-academica"
version = "0.2.0"
description = "Self-coordinating swarm of 20+ specialized agents that produces publication-ready research papers with genuine novelty, zero hallucinated citations, and no detectable AI-written patterns."
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "argahv" }
]
requires-python = ">=3.10"
keywords = ["research", "paper-writing", "multi-agent", "llm", "academic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Markup :: LaTeX",
]

[project.urls]
"Source" = "https://github.com/argahv/sisyphus-academica"
"Bug Tracker" = "https://github.com/argahv/sisyphus-academica/issues"
"Homepage" = "https://argahv.github.io/sisyphus-academica/"

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
